[gd_scene load_steps=3 format=3 uid="uid://i2xahoccub12"]

[ext_resource type="Script" path="res://scenes/menu2.gd" id="1_wk4xb"]
[ext_resource type="FontFile" uid="uid://c0buhu5smsj6n" path="res://Kitchen Sink.ttf" id="2_mmayr"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk4xb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 384
theme_override_constants/margin_top = 192
theme_override_constants/margin_right = 384
theme_override_constants/margin_bottom = 192

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mmayr")
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="Button2" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mmayr")
theme_override_font_sizes/font_size = 32
text = "TUTORIAL"

[node name="Button3" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mmayr")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
